2002-02-28 John Fleck <jfleck@inkstain.net>

	* add help/xmldocs.make
	* configure.in
	* help/nautilus-user-manual/Makefile.am
	* help/nautilus-user-manual/C/Makefile.am
	* help/nautilus-user-manual/C/nautilus-user-manual-C.omf
	* help/nautilus-user-manual/C/nautilus-user-manual.xml (added with
	cvs magic as a copy of the old sgml doc with history)
	converting old doc to xml and changing the build stuff to the new
	GNOME2 docness
	
2002-02-28  Alexander Larsson  <alla@lysator.liu.se>

	* src/nautilus-sidebar.c (nautilus_sidebar_class_init):
	(nautilus_sidebar_realize): Don't call
	gdk_window_set_static_gravities(). That old anti-flicker
	trick was just causing lots of flashing.
	Remove all traces of nautilus_sidebar_realize.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_get_link_icon_from_desktop):
	Fix handling of files with Icon entries that are full paths.

	* libnautilus-private/nautilus-file.c: Name tweak.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* components/notes/nautilus-notes.c: (do_destroy): Remove some
	GNOME2_CONVERSION_COMPLETE code.

	* src/nautilus-theme-selector.h:
	* src/nautilus-theme-selector.c:
	(remove_theme_selector_idle_callback): New.
	(remove_theme_selector_changed_callback): Schedule the remove to be done
	at idle time, since GtkTreeView can't handle changes to the tree from
	inside the selection changed signal.
	(theme_selector_finalize): Cancel idle if it's still around.
	(for_each_theme_callback), (theme_selector_populate_list),
	(theme_selector_update_selected_theme_from_preferences),
	(nautilus_theme_selector_get_selected_theme): Return NULL rather
	than emitting a g_warning when no theme is selected.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c: (add_numbered_menu_item):
	Escape the path too, not just the menu item name, because the path
	contains other menu item names.
	(add_submenu): Same.
