@@ -1,3 +1,8 @@
+2002-03-01  Alexander Larsson  <alla@lysator.liu.se>
+
+	* libnautilus-private/nautilus-icon-dnd.c (nautilus_icon_dnd_begin_drag):
+	Events are in bin_window coordinates. Not world coords.
+
 2002-02-28 John Fleck <jfleck@inkstain.net>
 
 	* add help/xmldocs.make
